# APIs

./: .gitignore  CMakeLists.txt  README.md  myWeather.desktop  run.sh  runWin.cmd
CallingAPIs/: CMakeLists.txt  callAPI  callAPI.cpp
CallingAPIs/include/: App.h  CallAPI.h  MainFrame.h  sample.xpm
CallingAPIs/src/: App.cpp  MainFrame.cpp  app.manifest  callAPI.cpp
